syntax="proto3";
import "google/api/annotations.proto";

option go_package="./proto";

package test;

//----------------------------------------------------Consumer Service--------------------------------------------------------
service ConsumerService {
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
}

message VerifyUserRequest {
  string id = 1;
}

message VerifyUserResponse {
  bool is_ok = 1;
}

//-----------------------------------------------------Order Service-----------------------------------------------------------
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative --grpc-gateway_out=. --grpc-gateway_opt paths=source_relative --grpc-gateway_opt generate_unbound_methods=true proto/order.proto

message Empty {}

service OrderService {
  rpc Order(OrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      get: "/create/order"
    };
  };
}

message OrderItem {
  string dish = 1;
  int32 total = 2;
}

message OrderRequest {
  string user_id = 1;
  string location =2;
  string store_id = 3;
  repeated OrderItem orders = 4;
}

message OrderResponse {
  bool is_ok = 1;
}